--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="title" content="Rufus - Tüm sürümler">
     <meta name="keywords" content="rufus">
+    <meta name="google-site-verification" content="sneWp1hdT5fPH20JIF1mg2ZEa0BrpEzmD3ateeMiFYM" />
     <link rel="icon" href="rufus.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
