--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<th class="title" width="120">Güncelleme</th>
 			</tr>
 			<tr>
-				<td class="item"><a class="no" href="rufus-4.5.1.exe"><code>rufus-4.5.1.exe</code></a></td>
+				<td class="item"><a class="no" href="rufus-4.5.1.exe"><code>rufus-4.5rc2.exe</code></a></td>
 				<td class="item">Standart</td>
 				<td class="item">Windows x64</td>
 				<td class="item"><span dir="ltr">4.0 MB</span></td>
@@ -55,7 +55,7 @@
 				<td class="item">29.04.2024</td>
 			</tr>
 			<tr>
-				<td class="item"><a class="no" href="rufus-4.5.exe"><code>rufus-4.5.exe</code></a></td>
+				<td class="item"><a class="no" href="rufus-4.5.exe"><code>rufus-4.5rc1.exe</code></a></td>
 				<td class="item">Standart</td>
 				<td class="item">Windows x64</td>
 				<td class="item"><span dir="ltr">4.0 MB</span></td>
